--- a/public/accountVerification.html
+++ b/public/accountVerification.html
@@ -105,7 +105,7 @@
         <div>
             <span>Your account is now verified!</span>
         </div>
-        <a href="http://localhost:3000/login">Login</a>
+        <a href="https://markoxsoskic.github.io/ms-nostalgiapp-frontend/login">Login</a>
     </section>
     <footer id="light">
         <span>© 2023 <a href="https://www.markososkic.com/" target="_blank">Marko
